# CV_Evaluation_Metrics

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py
cv_eval_metrics/abstract/: __init__.py  base_metric.py  evaluator.py
cv_eval_metrics/base/: base_dataset.py  evaluator.py
cv_eval_metrics/config/: __init__.py  c_metric_cfg.py  d_metric_cfg.py  imagenet_labels.py  metric_eval_cfg.py  t_metric_cfg.py
cv_eval_metrics/dataset/: __init__.py  coco.py  mot.py
cv_eval_metrics/metrics/classification/: __init__.py  accuracy.py  confusion_matrix.py  f1_score.py  precision.py  recall.py
cv_eval_metrics/metrics/common/: __init__.py  count.py
cv_eval_metrics/metrics/detection/: coco_metrics.py
cv_eval_metrics/metrics/tracking/: __init__.py  clear.py  hota.py  identity.py
cv_eval_metrics/objects/: __init__.py  classification_info.py  detection_info.py  tracking_info.py
cv_eval_metrics/utils/: __init__.py  allowed_opts.py  bboxes.py  check.py  classification_utils.py  tracking_utils.py
data/detection/: instances_val2014_fakebbox100_results.json  instances_val2014_modified.json
docs/: conf.py  index.rst
src/cv_evaluation_metrics/: __init__.py  main.py
src/cv_evaluation_metrics/config/: __init__.py  dataset_cfg.py  t_metric_cfg.py
src/cv_evaluation_metrics/tracking/: __init__.py  evaluator.py
src/cv_evaluation_metrics/utils/: __init__.py  tracking_utils.py
tests/: conftest.py  test_main.py
tools/: run_classification.py  run_detection.py  run_tracking.py
(+6 files in other folders)
