[metadata]
name = CV_Evaluation_Metrics
description = Add a short description here!
author = Arkar Phyo
author_email = arkarphyo.akp1996@gmail.com
license = MIT
license_files = LICENSE.txt

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
